Agent - fanuc iSeries/Fwlib/160/fwlib32.bas


' read program under execution
Declare Function cnc_rdexecprog% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, b%, ByVal c$)

' write program for MDI operation
Declare Function cnc_wrmdiprog% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b$)

' read execution pointer for MDI operation
#If ONO8D Then
Declare Function cnc_rdmdipntr% Lib "fwlib32.dll" Alias "cnc_rdmdipntro8" (ByVal FlibHndl%, Odb As ODBMDIP)
#Else
Declare Function cnc_rdmdipntr% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBMDIP)
#End If

' write execution pointer for MDI operation
Declare Function cnc_wrmdipntr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&)

' read constantly spindle speed
Declare Function cnc_rdspcss% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBCSS)

' read execution program pointer
Declare Function cnc_rdexecpt% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As PRGPNT, Odb As PRGPNT)

' read MDI program status
Declare Function cnc_rdmdiprgstat Lib "fwlib32.dll" (ByVal FlibHndl As Integer, a As Integer ) As Integer

' line edit (read program)
Declare Function cnc_rdprogline Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, ByVal b As Long, c As Byte, d As Long, e As Long) As Integer

' line edit (write program)
Declare Function cnc_wrprogline Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, ByVal b As Long, c As Byte, ByVal d As Long) As Integer

' line edit (delete line in program)
Declare Function cnc_delprogline Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, ByVal b As Long, ByVal c As Long ) As Integer

' line edit (search string)
Declare Function cnc_searchword Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, ByVal b As Long, ByVal c As Integer, ByVal d As Integer, e As Long, f As Byte) As Integer

' line edit (search string)
Declare Function cnc_searchresult Lib "fwlib32.dll" (ByVal FlibHndl As Integer, a As Long) As Integer

' program lock
Declare Function cnc_setpglock Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long) As Integer

' program unlock
Declare Function cnc_resetpglock Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long ) As Integer

' read the status of the program lock
Declare Function cnc_rdpglockstat Lib "fwlib32.dll" (ByVal FlibHndl As Integer, a As Long, b As Long) As Integer

' NC program copy
Declare Function cnc_copyprog Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, ByVal b As Long ) As Integer

' condense program
Declare Function cnc_condense Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Integer, ByVal b As Long ) As Integer


'---------------------------
' CNC: NC file data related
'---------------------------

' read tool offset value
Declare Function cnc_rdtofs% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As ODBTOFS)

' write tool offset value
Declare Function cnc_wrtofs% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d&)

' read tool offset value(area specified)
Declare Function cnc_rdtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As Any)

' write tool offset value(area specified)
Declare Function cnc_wrtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As Any)

' read work zero offset value
Declare Function cnc_rdzofs% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBZOFS)

' write work zero offset value
Declare Function cnc_wrzofs% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBZOFS)

' read work zero offset value(area specified)
Declare Function cnc_rdzofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBZOR)

' write work zero offset value(area specified)
Declare Function cnc_wrzofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBZOR)

' read parameter
Declare Function cnc_rdparam% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As Any)

' write parameter
Declare Function cnc_wrparam% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As Any)

' read parameter(area specified)
Declare Function cnc_rdparar% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, ByVal b%, c%, d%, Odb As Any)

' write parameter(area specified)
Declare Function cnc_wrparas% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As Any)

' read setting data
Declare Function cnc_rdset% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As Any)

' write setting data
Declare Function cnc_wrset% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As Any)

' read setting data(area specified)
Declare Function cnc_rdsetr% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, ByVal b%, c%, d%, Odb As Any)

' write setting data(area specified)
Declare Function cnc_wrsets% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As Any)

' read pitch error compensation data(area specified)
Declare Function cnc_rdpitchr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBPI)

' write pitch error compensation data(area specified)
Declare Function cnc_wrpitchr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBPI)

' read custom macro variable
Declare Function cnc_rdmacro% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBM)

' write custom macro variable
Declare Function cnc_wrmacro% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d%)

' read custom macro variables(area specified)
Declare Function cnc_rdmacror% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBMR)

' write custom macro variables(area specified)
Declare Function cnc_wrmacror% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBMR)

' read P code macro variable
Declare Function cnc_rdpmacro% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, Odb As ODBPM)

' write P code macro variable
Declare Function cnc_wrpmacro% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c%)

' read P code macro variables(area specified)
Declare Function cnc_rdpmacror% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As IODBPR)

' write P code macro variables(area specified)
Declare Function cnc_wrpmacror% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, Idb As IODBPR)

' read tool offset information
Declare Function cnc_rdtofsinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBTLINF)

' read work zero offset information
Declare Function cnc_rdzofsinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read pitch error compensation data information
Declare Function cnc_rdpitchinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read custom macro variable information
Declare Function cnc_rdmacroinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBMVINF)

' read P code macro variable information
Declare Function cnc_rdpmacroinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPMINF)

' read the information for function cnc_rdhsparam()
Declare Function cnc_rdhsprminfo Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, Odb As HSPINFO) As Integer

' read parameters at the high speed
Declare Function cnc_rdhsparam Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Long, Odb As Any, Odb As Any) As Integer

' read rotary table dynamic fixture offset
Declare Function cnc_rdfixoffs Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Integer, ByVal b As Integer, Odb As ODBFOFS) As Integer


'----------------------------------------
' CNC: Tool life management data related
'----------------------------------------

' read tool life management data(tool group number)
Declare Function cnc_rdgrpid% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE1)

' read tool life management data(number of tool groups)
Declare Function cnc_rdngrp% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBTLIFE2)

' read tool life management data(number of tools)
Declare Function cnc_rdntool% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3)

' read tool life management data(tool life)
Declare Function cnc_rdlife% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3)

' read tool life management data(tool lift counter)
Declare Function cnc_rdcount% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3)

' read tool life management data(tool length number-1)
Declare Function cnc_rd1length% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(tool length number-2)
Declare Function cnc_rd2length% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(cutter compensation no.-1)
Declare Function cnc_rd1radius% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(cutter compensation no.-2)
Declare Function cnc_rd2radius% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(tool information-1)
Declare Function cnc_t1info% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(tool information-2)
Declare Function cnc_t2info% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(tool number)
Declare Function cnc_toolnum% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4)

' read tool life management data(tool number, tool life, tool life counter)(area specified)
Declare Function cnc_rdtoolrng% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTR)

' read tool life management data(all data within group)
Declare Function cnc_rdtoolgrp% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTG)

' write tool life management data(tool life counter) (area specified)
Declare Function cnc_wrcountr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IDBWRC)

' read tool life management data(used tool group number)
Declare Function cnc_rdusegrpid% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBUSEGR)

' read tool life management data(max. number of tool groups)
Declare Function cnc_rdmaxgrp% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBLFNO)

' read tool life management data(maximum number of tool within group)
Declare Function cnc_rdmaxtool% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBLFNO)

' read tool life management data(used tool no. within group)
Declare Function cnc_rdusetlno% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As ODBTLUSE)

' read tool life management data(tool data1)
Declare Function cnc_rd1tlifedata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBTD)

' read tool life management data(tool data2)
Declare Function cnc_rd2tlifedata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBTD)

' write tool life management data(tool data1)
Declare Function cnc_wr1tlifedata% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBTD)

' write tool life management data(tool data2)
Declare Function cnc_wr2tlifedata% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBTD)

' read tool life management data(tool group information)
Declare Function cnc_rdgrpinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI)

' read tool life management data(tool group information 2)
Declare Function cnc_rdgrpinfo2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI2)

' read tool life management data(tool group information 3)
Declare Function cnc_rdgrpinfo3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI3)

' write tool life management data(tool group information)
Declare Function cnc_wrgrpinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBTGI)

' write tool life management data(tool group information 2)
Declare Function cnc_wrgrpinfo2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBTGI2)
